noinst_HEADERS = cache.h decoder.h decoder_basic.h decoder_opcodes.h \
                 dyn_fpu.h operators.h risc_x64.h risc_x86.h risc_mipsel32.h \
                 risc_armv4le.h risc_armv4le-common.h \
                 risc_armv4le-o3.h risc_armv4le-thumb.h \
                 risc_armv4le-thumb-iw.h risc_armv4le-thumb-niw.h risc_armv8le.h
