AM_CPPFLAGS = -I$(top_srcdir)/include

noinst_LIBRARIES = libparallel.a

libparallel_a_SOURCES = parport.cpp \
			directlpt_win32.cpp directlpt_win32.h \
			directlpt_linux.cpp directlpt_linux.h \
			printer_redir.cpp printer_redir.h printer_if.h \
			printer.cpp printer.h \
			printer_charmaps.cpp printer_charmaps.h \
			filelpt.cpp filelpt.h
