AM_CPPFLAGS = -I$(top_srcdir)/include -I$(top_srcdir)/src

noinst_LIBRARIES = libparallel.a

libparallel_a_SOURCES = parport.cpp \
			directlpt.cpp directlpt.h \
			printer_redir.h printer_if.h \
			printer.cpp printer.h \
			printer_charmaps.cpp printer_charmaps.h \
			filelpt.cpp filelpt.h printer_redir.cpp
