AM_CPPFLAGS = -I$(top_srcdir)/include

noinst_LIBRARIES = libresid.a

libresid_a_SOURCES = envelope.cpp envelope.h extfilt.cpp extfilt.h \
                     filter.cpp filter.h pot.cpp pot.h sid.cpp sid.h \
                     siddefs.h spline.h version.cpp voice.cpp voice.h \
                     wave.cpp wave.h wave6581_PST.cpp wave6581_PS_.cpp \
                     wave6581_P_T.cpp wave6581__ST.cpp wave8580_PST.cpp \
                     wave8580_PS_.cpp wave8580_P_T.cpp wave8580__ST.cpp
