AM_CPPFLAGS = -I$(top_srcdir)/include

noinst_LIBRARIES = libserial.a

libserial_a_SOURCES =	directserial.cpp directserial.h \
						libserial.cpp libserial.h \
						serialdummy.cpp serialdummy.h serialport.cpp \
						softmodem.cpp softmodem.h misc_util.cpp misc_util.h \
						nullmodem.cpp nullmodem.h serialmouse.cpp serialmouse.h
