AM_CPPFLAGS = -I$(top_srcdir)/include

noinst_LIBRARIES =
libfluidsynth_a_SOURCES =

noinst_LIBRARIES += libfluidsynth.a
libfluidsynth_a_SOURCES += fluid_dll.c fluid_cmd.c fluid_filerenderer.c \
    fluid_adriver.c fluid_aufile.c fluid_dsound.c fluid_mdriver.c fluid_sdl2.c \
    fluid_midi.c fluid_midi_router.c fluid_seq.c fluid_seqbind.c \
    fluid_adsr_env.c fluid_chorus.c fluid_iir_filter.c fluid_lfo.c fluid_rev.c \
    fluid_rvoice.c fluid_rvoice_dsp.c fluid_rvoice_event.c fluid_rvoice_mixer.c \
    fluid_defsfont.c fluid_ramsfont.c fluid_chan.c fluid_event.c \
    fluid_gen.c fluid_mod.c fluid_synth.c fluid_tuning.c fluid_voice.c \
    fluid_conv.c fluid_hash.c fluid_list.c fluid_ringbuffer.c fluid_settings.c fluid_sys.c
